add stubs for drawers, improve login/signup

--- a/radAR/app/src/main/res/layout/user_details.xml
+++ b/radAR/app/src/main/res/layout/user_details.xml
@@ -52,11 +52,25 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <ImageView
+                            android:id="@+id/userAddFriend"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:contentDescription="@string/trackuser"
+                            android:paddingLeft="5dp"
+                            android:paddingRight="5dp"
+                            android:clickable="true"
+                            app:srcCompat="@drawable/ic_person_add_white_48dp" />
+
+                        <ImageView
                             android:id="@+id/userTrack"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:contentDescription="@string/trackuser"
+                            android:paddingLeft="5dp"
+                            android:paddingRight="5dp"
+                            android:clickable="true"
                             app:srcCompat="@drawable/ic_my_location_white_36dp" />
                     </LinearLayout>
 
@@ -73,12 +87,13 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.625"
+                    android:clickable="true"
                     app:srcCompat="@drawable/ic_account_circle_black_18dp" />
 
                 <LinearLayout
                     android:id="@+id/linearLayout"
                     android:layout_width="247dp"
-                    android:layout_height="109dp"
+                    android:layout_height="106dp"
                     android:layout_marginBottom="16dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginStart="16dp"
@@ -88,7 +103,8 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/userProfile"
-                    app:layout_constraintTop_toTopOf="parent">
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:layout_editor_absoluteY="24dp">
 
                     <TextView
                         android:id="@+id/fullname"
@@ -125,18 +141,20 @@
             tools:layout_editor_absoluteY="0dp">
 
             <LinearLayout
+                android:id="@+id/linearLayout5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:orientation="vertical"
+                android:clickable="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/textView6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Profile"
@@ -146,8 +164,66 @@
                     android:id="@+id/user_details_profile"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:ellipsize="none"
+                    android:maxLines="100"
+                    android:scrollHorizontally="false"
+                    android:text="TextView" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayout4"
+                android:layout_width="match_parent"
+                android:layout_height="33dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                android:orientation="vertical"
+                android:clickable="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Email"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/user_details_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:text="TextView" />
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                android:orientation="vertical"
+                android:clickable="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
+                tools:layout_editor_absoluteX="0dp">
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Phone Number"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/user_details_phone_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
             </LinearLayout>
 
         </android.support.constraint.ConstraintLayout>
@@ -162,7 +238,7 @@
         android:layout_height="48dp"
         android:layout_margin="16dp"
         android:clickable="true"
-        android:padding="5dp, 5dp, 5dp, 5dp, 5dp"
+        android:padding="5dp"
         android:src="@drawable/ic_chat_white_48dp"
         app:layout_anchor="@+id/nestedScrollView"
         app:layout_anchorGravity="right|top"
