--- a/radAR/app/src/main/res/menu/activity_drawer_drawer.xml
+++ b/radAR/app/src/main/res/menu/activity_drawer_drawer.xml
@@ -6,21 +6,22 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="Map View" />
+        <item
             android:id="@+id/nav_chats"
             android:icon="@drawable/ic_menu_camera"
             android:title="Chats" />
         <item
             android:id="@+id/nav_tracking_groups"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Tracking Group" />
-        <item
-            android:id="@+id/nav_"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="Tracking Groups" />
+
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Footprints" />
     </group>
 
     <item android:title="Options">
@@ -31,7 +32,7 @@
                 android:title="Settings" />
             <item
                 android:id="@+id/nav_logout"
-                android:icon="@drawable/ic_menu_send"
+                android:icon="@drawable/ic_exit_to_app_black_48dp"
                 android:title="Logout" />
         </menu>
     </item>
