--- a/radAR/app/src/main/res/xml/pref_headers.xml
+++ b/radAR/app/src/main/res/xml/pref_headers.xml
@@ -2,19 +2,21 @@
 
     <!-- These settings headers are only used on tablets. -->
 
+    <!-- https://developer.android.com/guide/topics/ui/settings.html -->
+
     <header
         android:fragment="com.oxygen.radar.SettingsActivity$GeneralPreferenceFragment"
-        android:title="@string/pref_header_general"
-        android:icon="@drawable/ic_info_black_24dp" />
+        android:icon="@drawable/ic_info_black_24dp"
+        android:title="@string/pref_header_general" />
 
     <header
         android:fragment="com.oxygen.radar.SettingsActivity$NotificationPreferenceFragment"
-        android:title="@string/pref_header_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp" />
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/pref_header_notifications" />
 
     <header
         android:fragment="com.oxygen.radar.SettingsActivity$DataSyncPreferenceFragment"
-        android:title="@string/pref_header_data_sync"
-        android:icon="@drawable/ic_sync_black_24dp" />
+        android:icon="@drawable/ic_sync_black_24dp"
+        android:title="@string/pref_header_data_sync" />
 
 </preference-headers>
