--- a/radAR/app/src/main/res/layout/user_list_item.xml
+++ b/radAR/app/src/main/res/layout/user_list_item.xml
@@ -23,30 +23,43 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <LinearLayout
+                <android.support.constraint.ConstraintLayout
+                    android:id="@+id/linearLayout7"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="left|center"
                     android:clickable="true"
-                    android:orientation="horizontal">
+                    android:gravity="left|center"
+                    tools:layout_editor_absoluteX="0dp"
+                    tools:layout_editor_absoluteY="0dp">
 
                     <ImageView
                         android:id="@+id/imageView4"
-                        android:layout_width="122dp"
+                        android:layout_width="66dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginStart="2dp"
+                        android:layout_marginTop="8dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/user_list_item_username"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
                         app:srcCompat="@drawable/ic_person_black_48dp" />
 
                     <TextView
                         android:id="@+id/user_list_item_username"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginStart="8dp"
                         android:text="TextView"
                         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                        android:textStyle="bold" />
-                </LinearLayout>
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/imageView4"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </android.support.constraint.ConstraintLayout>
 
             </LinearLayout>
 
