--- a/radAR/app/src/main/res/layout/tracking_group_details.xml
+++ b/radAR/app/src/main/res/layout/tracking_group_details.xml
@@ -85,7 +85,7 @@
                 </android.support.constraint.ConstraintLayout>
 
                 <ImageView
-                    android:id="@+id/userProfile"
+                    android:id="@+id/tracking_group_details_profile"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:layout_marginBottom="30dp"
@@ -109,7 +109,7 @@
                     android:orientation="vertical"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/userProfile"
+                    app:layout_constraintStart_toEndOf="@+id/tracking_group_details_profile"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:layout_editor_absoluteY="24dp">
 
