--- a/base_sample_app/MovieDirectory/app/src/main/res/menu/menu_main.xml
+++ b/base_sample_app/MovieDirectory/app/src/main/res/menu/menu_main.xml
@@ -2,8 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.gohool.moviedirectory.moviedirectory.MainActivity" >
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+    <item android:id="@+id/new_search"
+        android:title="Search"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
 </menu>
