--- a/radAR/app/src/main/res/layout/activity_signup.xml
+++ b/radAR/app/src/main/res/layout/activity_signup.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:theme="@android:style/Theme.NoTitleBar"
     android:fitsSystemWindows="true">
 
     <LinearLayout
