--- a/radAR/app/src/main/res/layout/content_chat_list.xml
+++ b/radAR/app/src/main/res/layout/content_chat_list.xml
@@ -8,4 +8,14 @@
     tools:context="com.oxygen.radar.ChatListActivity"
     tools:showIn="@layout/activity_chat_list">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/activity_chat_list_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
