--- a/radAR/app/src/main/res/layout/user_list_item.xml
+++ b/radAR/app/src/main/res/layout/user_list_item.xml
@@ -11,7 +11,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="0dp"
         android:layout_marginStart="0dp"
         app:layout_constraintEnd_toEndOf="parent"
