--- a/radAR/app/src/main/res/layout/activity_chat_screen.xml
+++ b/radAR/app/src/main/res/layout/activity_chat_screen.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="#ffffff"
     android:orientation="vertical"
-    android:theme="@style/AppTheme.AppBarOverlay">
+    android:theme="@style/AppTheme">
 
     <ScrollView
         android:layout_width="match_parent"
