--- a/radAR/app/src/main/res/values-v21/styles.xml
+++ b/radAR/app/src/main/res/values-v21/styles.xml
@@ -5,4 +5,13 @@
         <item name="windowNoTitle">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
+
+    <style name="Default" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorAccent">@color/accent_material_light_2</item>
+        <item name="colorPrimary">@color/accent_material_light_1</item>
+        <item name="android:textColorPrimary">@android:color/primary_text_light</item>
+        <item name="android:colorForeground">@color/accent_material_light_1</item>
+        <item name="android:navigationBarColor">@color/accent_material_light_1</item>
+        <item name="android:textColorSecondary">?android:attr/textColorSecondaryInverse</item>
+    </style>
 </resources>
