--- a/radAR2/app/src/main/res/layout/activity_friends.xml
+++ b/radAR2/app/src/main/res/layout/activity_friends.xml
@@ -47,7 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
-        android:src="@android:drawable/ic_dialog_email" />
+        android:src="@android:drawable/ic_menu_search" />
 
 
 
