--- a/radAR2/app/src/main/res/layout/row_friends.xml
+++ b/radAR2/app/src/main/res/layout/row_friends.xml
@@ -20,7 +20,8 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:orientation="vertical"
-            android:id="@+id/linearLayout">
+            android:id="@+id/linearLayout"
+            android:layout_marginBottom="5dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
