--- a/radAR2/app/src/main/res/layout/row_friends.xml
+++ b/radAR2/app/src/main/res/layout/row_friends.xml
@@ -34,13 +34,15 @@
                     android:layout_alignParentStart="true"
                     android:layout_alignTop="@+id/linearLayout"
                     android:text="Kenneth A."
+                    android:textColor="@android:color/black"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/row_friends_username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text=" krusli" />
+                    android:text=" krusli"
+                    android:textColor="@android:color/black" />
 
             </LinearLayout>
 
