--- a/radAR2/app/src/main/res/layout/app_bar_home_screen.xml
+++ b/radAR2/app/src/main/res/layout/app_bar_home_screen.xml
@@ -20,7 +20,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_drawer" />
+    <include layout="@layout/content_home_screen" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
