--- a/radAR2/app/src/main/res/values/colors.xml
+++ b/radAR2/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3f51b5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#7b1fa2</color>
+    <color name="colorPrimary">#01579b</color>
+    <color name="colorPrimaryDark">#1a237e</color>
+    <color name="colorAccent">#ffb300</color>
     <color name="colorSuperAppBar">#237ccf</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorBlack">#000000</color>
