--- a/radAR2/app/src/main/res/values/styles.xml
+++ b/radAR2/app/src/main/res/values/styles.xml
@@ -7,6 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="actionBarStyle">@style/MyActionBar</item>
+        <item name="android:textColorSecondary">@color/text_color_secondary</item>
+        <item name="android:statusBarColor">?android:attr/colorPrimary</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
