--- a/radAR/app/src/main/res/menu/activity_drawer_drawer.xml
+++ b/radAR/app/src/main/res/menu/activity_drawer_drawer.xml
@@ -6,7 +6,7 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_"
+            android:id="@+id/nav_maps"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Map View" />
         <item
