Add launch activity - redirects to login or homescreen appropriately

--- a/radAR2/app/src/main/res/values/styles.xml
+++ b/radAR2/app/src/main/res/values/styles.xml
@@ -1,4 +1,12 @@
 <resources>
+    <!-- Transluscent activity -->
+    <style name="Theme.AppCompat.Translucent" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation</item>
+    </style>
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
