--- a/radAR2/app/src/main/res/layout/row_friends.xml
+++ b/radAR2/app/src/main/res/layout/row_friends.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <ImageView
         android:id="@+id/row_friends_profile_picture"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:background="@drawable/img"
+        android:contentDescription="Profile picture"
         android:src="@mipmap/ic_launcher" />
 
     <RelativeLayout
@@ -15,7 +18,8 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:paddingLeft="8dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -33,7 +37,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
-                    android:layout_alignTop="@+id/linearLayout"
                     android:text="Kenneth A."
                     android:textColor="@android:color/black"
                     android:textStyle="bold" />
