--- a/radAR2/app/src/main/res/layout/activity_login.xml
+++ b/radAR2/app/src/main/res/layout/activity_login.xml
@@ -48,18 +48,23 @@
             android:id="@+id/btn_login"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
+            android:layout_marginTop="24dp"
+            android:background="@color/colorPrimary"
             android:padding="12dp"
-            android:text="Login"/>
+            android:text="Login"
+            android:textColor="@color/cardview_light_background"
+            android:textStyle="bold" />
 
-        <TextView android:id="@+id/link_signup"
+        <TextView
+            android:id="@+id/link_signup"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
-            android:text="No account yet? Create one"
             android:gravity="center"
-            android:textSize="16dip"/>
+            android:text="No account yet? Create one"
+            android:textColor="@color/colorSuperAppBar"
+            android:textSize="16dip" />
 
     </LinearLayout>
 </ScrollView>
