--- a/radAR2/app/src/main/res/layout/activity_signup.xml
+++ b/radAR2/app/src/main/res/layout/activity_signup.xml
@@ -26,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Username"
-                android:inputType="textCapWords" />
+                android:textSize="12sp" />
         </android.support.design.widget.TextInputLayout>
 
         <!-- Email Label -->
@@ -41,7 +41,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Email"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:textSize="12sp" />
         </android.support.design.widget.TextInputLayout>
 
         <!-- Password Label -->
@@ -57,7 +58,7 @@
                 android:layout_height="wrap_content"
                 android:hint="Password"
                 android:inputType="textPassword"
-                android:textSize="14sp" />
+                android:textSize="12sp" />
         </android.support.design.widget.TextInputLayout>
 
         <!-- Signup Button -->
@@ -65,18 +66,23 @@
             android:id="@+id/btn_signup"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
+            android:layout_marginTop="24dp"
+            android:background="@color/colorPrimary"
             android:padding="12dp"
-            android:text="Create Account"/>
+            android:text="CREATE ACCOUNT"
+            android:textColor="@color/cardview_light_background"
+            android:textStyle="bold" />
 
-        <TextView android:id="@+id/link_login"
+        <TextView
+            android:id="@+id/link_login"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
-            android:text="Already a member? Login"
             android:gravity="center"
-            android:textSize="16dip"/>
+            android:text="Already a member? Login"
+            android:textColor="@color/colorSuperAppBar"
+            android:textSize="16dip" />
 
     </LinearLayout>
 </ScrollView>
