--- a/radAR2/app/src/main/res/layout/activity_friend_request.xml
+++ b/radAR2/app/src/main/res/layout/activity_friend_request.xml
@@ -6,4 +6,16 @@
     android:layout_height="match_parent"
     tools:context="radar.radar.FriendRequestActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/requestRecyclerView"
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
