--- a/radAR2/app/src/main/res/layout/activity_chat_list.xml
+++ b/radAR2/app/src/main/res/layout/activity_chat_list.xml
@@ -7,6 +7,7 @@
     tools:context="radar.radar.ChatListActivity">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/chatRecyclerView"
         android:layout_width="368dp"
         android:layout_height="495dp"
         android:layout_marginBottom="8dp"
