Live distance indicators and destination name

--- a/radAR2/app/src/main/res/layout/activity_ar2.xml
+++ b/radAR2/app/src/main/res/layout/activity_ar2.xml
@@ -17,29 +17,37 @@
         android:layout_width="0dp"
         android:id="@+id/ARview_layout_for_annotations"/>
 
-    <LinearLayout
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/ARview_layout_for_annotations">
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="0dp">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:orientation="vertical">
-            <TextView
-                android:id="@+id/ARAnnotation_distance_to_dest"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="48dp"
-                android:text="200m"/>
-            <TextView
-                android:layout_below="@+id/ARAnnotation_distance_to_dest"
-                android:layout_centerHorizontal="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="to South Lawn"/>
-        </RelativeLayout>
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/HUD_distance_to_dest"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="200m"
+                android:textAlignment="center"
+                android:textSize="48dp" />
+
+            <TextView
+                android:id="@+id/HUD_destination_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/HUD_distance_to_dest"
+                android:layout_centerHorizontal="true"
+                android:text="to South Lawn"
+                android:textAlignment="center" />
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
